@@ -1,6 +1,9 @@
 Noteworthy changes in version 2.2.7 (unreleased)
 ------------------------------------------------
 
+  * gpg: New option --no-symkey-cache to disable the passphrase cache
+    for symmetrical en- and decryption.
+
 
 Noteworthy changes in version 2.2.6 (2018-04-09)
 ------------------------------------------------
